TEST: cv, job service testcode